<resources>
    <string name="app_name">Submission2Github</string>
    <string name="search_user">Search user here!</string>
    <string name="username">Username</string>
    <string name="id_user">ID User</string>
    <string name="type_user">Type User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="data_not_found">Data not Found!</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="company">Company</string>
    <string name="email">Email</string>
    <string name="blog">Blog</string>
    <string name="favorite_user_list">Favorite User List</string>
    <string name="repositories">Repositories</string>
    <string name="_10">10</string>
    <string name="follower">Followers</string>
    <string name="following">Following</string>
    <string name="owner">Made by Lopniv</string>
    <string name="reminder">Reminder</string>
    <string name="detail_reminder">Remind users to search for their favorite users at 9 am</string>
    <string name="message_reminder">Reminder! Come on, find your favorite user now</string>
</resources>