<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_user_profile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="50dp"
                app:civ_border_overlay="true"
                app:civ_border_width="5dp"
                app:civ_border_color="@color/white"
                android:src="@drawable/ic_launcher_background"
                android:layout_centerHorizontal="true"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_user_profile"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:text="@string/username"
                android:textSize="24sp"
                android:layout_marginTop="10dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_username"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:text="@string/id_user"
                android:textSize="18sp"
                android:layout_marginTop="5dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_id"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:text="@string/type_user"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"/>

        </RelativeLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tablayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </androidx.viewpager.widget.ViewPager>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>